Submenu alignment of items fix

--- a/styles/gin_toolbar.scss
+++ b/styles/gin_toolbar.scss
@@ -618,6 +618,7 @@
           &__sub-title {
             font-size: 1.5em;
             letter-spacing: normal;
+            margin-bottom: 7px;
           }
 
           .menu-item {
